--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <div class="conteiner">
       <div class="leftconteiner">
         <div class="boris">
+          <img src="https://github.com/lewagon/html-css-challenges/blob/master/shared/images/boris.jpg?raw=true" alt="">
+          <h1>Boris Paillard</h1>
+          <h2>CEO @Le Wagon</h2>
+          <p>After 3 years in financial markets, I got bored and launched Le Wagon. Our mission: bring technical skills to creative people.</p>
+
 
         </div>
         <div class="social">
