--- a/index.html
+++ b/index.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <div class="conteiner">
-      <div class="leftconteiner">
-        <div class="boris">
-          <img src="https://github.com/lewagon/html-css-challenges/blob/master/shared/images/boris.jpg?raw=true" alt="">
-          <h1>Boris Paillard</h1>
-          <h2>CEO @Le Wagon</h2>
-          <p>After 3 years in financial markets, I got bored and launched Le Wagon. Our mission: bring technical skills to creative people.</p>
+      <div class="wrapper">
+          <div class="leftconteiner">
+            <div class="boris">
+              <img src="https://github.com/lewagon/html-css-challenges/blob/master/shared/images/boris.jpg?raw=true" alt="">
+              <h1>Boris Paillard</h1>
+              <h2>CEO @Le Wagon</h2>
+              <p>After 3 years in financial markets, I got bored and launched Le Wagon. Our mission: bring technical skills to creative people.</p>
+              <a href="#" class="borisbtn">See for yourself</a>
 
 
+            </div>
+            <div class="social">
+              <ul class="sociallist">
+                <li class="socialitem">
+                  <a href="https://www.facebook.com/boris.paillard">
+                    <i class="fa fa-facebook"></i> <br>Facebook
+                  </a>
+                </li>
+                <li class="socialitem">
+                  <a href="https://www.linkedin.com/in/boris-paillard-86722670">
+                    <i class="fa fa-linkedin"></i> <br>Linkedin
+                  </a>
+                </li>
+                <li class="socialitem">
+                  <a href="https://twitter.com/bpapillard">
+                    <i class="fa fa-twitter"></i> <br>Twitter
+                  </a>
+                </li>
+
+
+
+              </ul>
+
+            </div>
+
+          </div>
+        <div class="rightconteiner">
         </div>
-        <div class="social">
-
-        </div>
-
       </div>
-      <div class="rightconteiner">
 
-      </div>
       <div class="about">
 
-      </div>
+        </div>
 
 
 
