--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title></title>
@@ -24,17 +24,19 @@
               <ul class="sociallist">
                 <li class="socialitem">
                   <a href="https://www.facebook.com/boris.paillard">
-                    <i class="fa fa-facebook"></i> <br>Facebook
+                    <i class="fab fa-facebook-f"></i>
+                    <br>Facebook
                   </a>
                 </li>
                 <li class="socialitem">
                   <a href="https://www.linkedin.com/in/boris-paillard-86722670">
-                    <i class="fa fa-linkedin"></i> <br>Linkedin
+                    <i class="fab fa-linkedin-in"></i> <br>Linkedin
                   </a>
                 </li>
                 <li class="socialitem">
                   <a href="https://twitter.com/bpapillard">
-                    <i class="fa fa-twitter"></i> <br>Twitter
+                    <i class="fab fa-twitter"></i>
+                   <br>Twitter
                   </a>
                 </li>
 
