--- a/index.html
+++ b/index.html
@@ -48,6 +48,45 @@
 
           </div>
         <div class="rightconteiner">
+          <h2>My Favorite movies</h2>
+          <div class="line">
+            <div class="image">
+              <img src="https://github.com/lewagon/html-css-challenges/blob/master/shared/images/space-odyssey.jpg?raw=true" alt="">
+
+
+            </div>
+            <div class="textdescription">
+              <h4>2001 - Space Odyssey</h4>
+              <p>Humanity finds a mysterious, obviously artificial, object buried beneath the Lunar surface and, with the intelligent computer H.A.L. 9000, sets off on a quest.</p>
+
+            </div>
+
+          </div>
+          <div class="line">
+            <div class="image">
+              <img src="https://github.com/lewagon/html-css-challenges/blob/master/shared/images/monsieur-hulot.jpg?raw=true" alt="">
+
+            </div>
+            <div class="textdescription">
+              <h4>Monsieur Hulot</h4>
+              <p>Monsieur Hulot comes to a beachside hotel for a vacation, where he accidentally (but good-naturedly) causes havoc.</p>
+
+
+            </div>
+
+          </div>
+          <div class="line">
+            <div class="image">
+              <img src="https://raw.githubusercontent.com/lewagon/html-css-challenges/master/shared/images/alien.jpg" alt="">
+
+            </div>
+            <div class="textdescription">
+              <h4>Alien</h4>
+              <p>The commercial vessel Nostromo receives a distress call from an unexplored planet. After searching for survivors, the crew heads home only to realize that a deadly bioform has joined them.</p>
+
+            </div>
+
+          </div>
         </div>
       </div>
 
