--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
           <div class="line">
             <div class="image">
               <img src="https://raw.githubusercontent.com/lewagon/html-css-challenges/master/shared/images/alien.jpg" alt="">
-
             </div>
             <div class="textdescription">
               <h4>Alien</h4>
@@ -89,10 +88,18 @@
           </div>
         </div>
       </div>
-
       <div class="about">
+        <div class="aboutleft">
+          <h2>About this page</h2>
+          <p>This page has been coded during the <a href="#">FullStack program @LeWagon.</a> That was probably the best experience of my entire life.</p>
 
         </div>
+        <div class="aboutright">
+
+        </div>
+
+
+
 
 
 
