--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
               <h2>CEO @Le Wagon</h2>
               <p>After 3 years in financial markets, I got bored and launched Le Wagon. Our mission: bring technical skills to creative people.</p>
               <a href="#" class="borisbtn">See for yourself</a>
-
-
             </div>
             <div class="social">
               <ul class="sociallist">
@@ -39,9 +37,6 @@
                    <br>Twitter
                   </a>
                 </li>
-
-
-
               </ul>
 
             </div>
@@ -95,6 +90,24 @@
 
         </div>
         <div class="aboutright">
+          <ul>
+            <li>
+              <a href="#">
+              <i class="fas fa-heart"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+              <i class="fas fa-share"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+              <i class="fas fa-star"></i>
+
+              </a>
+            </li>
+          </ul>
 
         </div>
 
